--- a/app/templates/playgame.hbs
+++ b/app/templates/playgame.hbs
@@ -49,7 +49,7 @@
 
     <GameSection @class="grid-container" @data-test="grid-container">
       {{#each @model.grid as |row|}}
-        {{#each row as |square i|}}
+        {{#each row as |square|}}
           {{#if (eq square.marker "")}}
             <Button @type="button" @usage="grid"
               @class={{if (eq this.currentMarker "x") "grid__item grid__item--unmarked-x" "grid__item grid__item--unmarked-o"}}
@@ -105,7 +105,7 @@
 
     <GameSection @class="grid-container" @data-test="grid-container">
       {{#each @model.grid as |row|}}
-        {{#each row as |square i|}}
+        {{#each row as |square|}}
           {{#if (or this.winner this.draw)}}
             {{#if square.marker}}
               <div class={{if square.isWinningSquare "grid__item grid__item--winning" "grid__item grid__item--marked"}}
