added nacho libre images, quotes and sound, still need to add new colors

--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -1,8 +1,10 @@
 <footer class="game-footer">
   <nav class="game-footer__menu">
-    <a class="game-footer-menu__item" href="https://github.com/camario25/tic-tac-toe"><i class="fab fa-github-square game-footer-menu-item__icon" aria-hidden="true"></i>Code
+    <a class="game-footer-menu__item" href="https://github.com/camario25/tic-tac-toe"><i
+        class="fab fa-github-square game-footer-menu-item__icon" aria-hidden="true"></i>Code
     </a>
-    <a class="game-footer-menu__item" href="mailto:mario.alcantar.ca@gmail.com" aria-label="send email to game creator"><i class="fas fa-envelope game-footer-menu-item__icon" aria-hidden="true"></i>Send Feedback
+    <a class="game-footer-menu__item" href="mailto:mario.alcantar.ca@gmail.com" aria-label="send feedback"><i
+        class="fas fa-envelope game-footer-menu-item__icon" aria-hidden="true"></i>Feedback
     </a>
   </nav>
 </footer>
