--- a/app/styles/_end-modal.scss
+++ b/app/styles/_end-modal.scss
@@ -26,12 +26,15 @@
     background-color: #31298a;
     border-color: #8a80ff;
     color: $white;
-    &:hover,
-    &:focus {
-      background-color: #6056d6;
-      height: 2.1rem;
-      width: 9.25rem;
+    @media only screen and (min-width: 64rem) {
+      &:hover,
+      &:focus {
+        background-color: #6056d6;
+        height: 2.1rem;
+        width: 9.25rem;
+      }
     }
+
     @media only screen and (max-width: 64rem) {
       height: 3rem;
     }
