nacho visual theme is complete

--- a/app/styles/_base_variables.scss
+++ b/app/styles/_base_variables.scss
@@ -1,6 +1,5 @@
+@import "colors.scss";
+
 $h1-margin: 2rem 1rem;
 $h1-font-size: 3rem;
-$dark-purple: #31298a;
-$light-purple: #8a80ff;
 $all-sides-same: 1rem;
-$white: #fff;
