--- a/app/components/audio-control.hbs
+++ b/app/components/audio-control.hbs
@@ -1,3 +1,3 @@
-<audio controls src=@src class=@class>
+<audio controls src={{@src}} class={{@class}}>
   Sorry, your browser does not support the audio controls.
 </audio>
