--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -4,12 +4,18 @@
     margin: 1.5rem;
     font-size: 2rem;
     text-decoration: none;
-    color: $dark-purple;
+    color: $burgundy;
     &:hover {
-      color: #6056d6;
+      color: $dark-turquoise;
+    }
+    @media only screen and (max-width: 32rem) {
+      margin: 0.5rem;
     }
   }
   .game-footer-menu-item__icon {
     margin: 0.5rem;
+    @media only screen and (max-width: 32rem) {
+      margin: 0.1rem;
+    }
   }
 }
