--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -2,9 +2,8 @@
   width: 31rem;
   height: 31rem;
   margin: 1rem auto;
-  background-color: #637ff7;
-  color: $white;
-  border: 0.375rem solid #6056d6;
+  background-color: $light-turquoise;
+  border: 0.375rem solid $burgundy;
   border-radius: 0.625rem;
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
@@ -14,9 +13,9 @@
     margin-top: 0.25rem;
   }
   .grid__item {
-    color: $white;
-    background-color: #637ff7;
-    border: 0.375rem solid #6056d6;
+    color: $burgundy;
+    background-color: $light-turquoise;
+    border: 0.375rem solid $burgundy;
     border-radius: 0.125rem;
     font-weight: bold;
     font-size: 6rem;
@@ -33,23 +32,19 @@
       }
     }
     &--unmarked-x:hover {
-      border-color: $dark-purple;
+      border-color: $burgundy;
       background-color: #a09bdd;
       cursor: url(/assets/images/X-Cursor.cur), pointer;
       caret-color: $white;
     }
     &--unmarked-o:hover {
-      border-color: $dark-purple;
+      border-color: $burgundy;
       background-color: #a09bdd;
       cursor: url(/assets/images/O-Cursor.cur), pointer;
       caret-color: $white;
     }
-    &--winning {
-      // content: url("/assets/images/nacho-mask-c.jpg");
-      // display: block;
-      // margin-left: auto;
-      // margin-right: auto;
-      // width: 40%;
-    }
+  }
+  .grid__item--marked-ramses {
+    color: $gold;
   }
 }
