cleaned up some css variablesand now name submit button is only enabled when both inputs have a name, any character is fine

--- a/app/components/button.hbs
+++ b/app/components/button.hbs
@@ -4,7 +4,7 @@
     {{yield}}
   </button>
 {{else}}
-  <button type={{@type}} class={{@class}} {{on "click" @function}} data-test={{@data-test}}>
+  <button type={{@type}} class={{@class}} {{on "click" @function}} disabled={{@disabled}} data-test={{@data-test}}>
     {{yield}}
   </button>
 {{/if}}
