--- a/app/styles/_end-modal.scss
+++ b/app/styles/_end-modal.scss
@@ -9,10 +9,10 @@
     color: $gold;
   }
   &__section {
-    margin: 1rem;
+    margin: $all-sides-same;
   }
   &-section__title {
-    margin: 1rem;
+    margin: $all-sides-same;
     font-size: 2.5rem;
     color: $dark-turquoise;
   }
