--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -12,7 +12,7 @@
   }
 }
 .form {
-  margin: 1rem;
+  margin: $all-sides-same;
   &__title {
     margin: 1rem 1rem 0.5rem 1rem;
     color: $burgundy;
@@ -74,6 +74,9 @@
     }
     @media only screen and (max-width: 64rem) {
       height: 4rem;
+    }
+    &--disabled {
+      opacity: 0.5;
     }
   }
 }
