--- a/app/templates/playgame.hbs
+++ b/app/templates/playgame.hbs
@@ -1,14 +1,14 @@
 <main class="game-container">
   <h1 class="game__title">Tic-Na-Cho</h1>
   {{#if (eq this.userView "entrance")}}
-    <GameSection @class="game-header">
+    <GameSection @class="game-header" @data-test="game-header-section">
       <h2 class="game__subtitle">
         Nacho Vs. Ramses - Tic Tac Toe
       </h2>
       <div class="game-header-img-wrapper">
         <img class="game-header__img" src="assets/images/nacho-vs-ramses.jpeg" alt="Nacho vs Ramses">
       </div>
-      <Button @class="game__button--enter" @function={{this.showInputNames}}>
+      <Button @class="game__button--enter" @function={{this.showInputNames}} @data-test="game__button--enter">
         Enter
       </Button>
     </GameSection>
