add one player option against computer
fix button styles
add start over button to footer
and new sound clip neety greety
rename getters for marker and name

--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -1,4 +1,7 @@
 <footer class="game-footer">
+  <button class="game-footer__button--start-over" {{on "click" (fn @clickFunction)}} data-test="game__button--start-over">
+    Start Over
+  </button>
   <nav class="game-footer__menu">
     <a class="game-footer-menu__item" href="https://github.com/camario25/tic-tac-toe"><i
         class="fab fa-github-square game-footer-menu-item__icon" aria-hidden="true"></i>Code
