--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -55,21 +55,18 @@
   }
   &__button-submit {
     margin-top: 0.75rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     width: 9rem;
     height: 3rem;
     border-radius: 0.25rem;
     background-color: $burgundy;
-    border-color: $burgundy;
     color: $white;
     @media only screen and (min-width: 64rem) {
       &:focus,
       &:hover {
-        width: 9.25rem;
-        height: 3.1rem;
         border-color: $dark-turquoise;
         background-color: $dark-turquoise;
-        font-size: 2.25rem;
+        box-shadow: 0 0 0 .1rem $dark-turquoise;
       }
     }
     @media only screen and (max-width: 64rem) {
