--- a/app/templates/playgame.hbs
+++ b/app/templates/playgame.hbs
@@ -8,10 +8,37 @@
       <div class="game-header-img-wrapper">
         <img class="game-header__img" src="assets/images/nacho-vs-ramses.jpeg" alt="Nacho vs Ramses">
       </div>
+      <Button @class="game__button--enter" @function={{this.showInputSingle}} @data-test="game__button--enter">
+        One Player
+      </Button>
       <Button @class="game__button--enter" @function={{this.showInputNames}} @data-test="game__button--enter">
-        Enter
+        Two Player
       </Button>
     </GameSection>
+  {{/if}}
+
+  {{#if (eq this.userView "singleName")}}
+    <GameSection @class="inputSingleName">
+      <img class="inputNames__img--nacho" src="assets/images/nacho-intro-c.jpg" alt="Nacho enters ring">
+      <Form @class="form" @data-test="game-form">
+        <h2 class='form__title'>Enter Luchador's Name</h2>
+        <h5 class='form__subtitle'>* luchador who goes first is selected at random</h5>
+        <div class='form__group'>
+          <label for="playerA">
+            Luchador Name
+          </label>
+          <div class="form__control-wrapper">
+            <Input class="form__control" id="playerA" placeholder="*Name" @input={{this.inputPlayerA}}
+              autocomplete="off" data-test="input-1" />
+          </div>
+        </div>
+        <Button @type="submit"
+          @class={{if this.disabledSubmit "form__button-submit form__button-submit--disabled" "form__button-submit"}}
+          @function={{this.newGame }} @disabled={{this.disabledSubmit}} @data-test="button-submit">Play</Button>
+      </Form>
+      <img class="inputNames__img--ramses" src="assets/images/ramses-intro-c.jpg" alt="Ramses enters ring">
+    </GameSection>
+    <Footer @clickFunction={{this.showEntrance}}/>
   {{/if}}
 
   {{#if (eq this.userView "playerNames")}}
@@ -44,6 +71,7 @@
       </Form>
       <img class="inputNames__img--ramses" src="assets/images/ramses-intro-c.jpg" alt="Ramses enters ring">
     </GameSection>
+    <Footer @clickFunction={{this.showEntrance}}/>
 
   {{else if (eq this.userView "playingGame")}}
     <GameSection @class="players-container">
@@ -93,7 +121,13 @@
         {{/each}}
       {{/each}}
     </GameSection>
-    <Footer />
+    <GameSection @class="audio-section">
+      <audio controls autoplay>
+          <source src="assets/sounds/neety-greety.mp3">
+          Sorry, your browser does not support the audio controls.
+      </audio>
+    </GameSection>
+    <Footer @clickFunction={{this.showEntrance}}/>
 
   {{else if (eq this.userView "endGame")}}
     <GameSection @class="players-container">
@@ -183,6 +217,6 @@
         {{/each}}
       {{/each}}
     </GameSection>
-    <Footer />
+    <Footer @clickFunction={{this.showEntrance}}/>
   {{/if}}
 </main>
